design invoice create page

--- a/html/unique/add-product.html
+++ b/html/unique/add-product.html
@@ -1015,6 +1015,7 @@
                     <li> <a href="checkout.html">Checkout</a></li>
                     <li> <a href="invoice.html">Invoice</a></li>
                     <li> <a href="invoice-preview.html">Invoice Preview</a></li>
+                    <li> <a href="invoice-create.html">Invoice Create</a></li>
                     <li> <a href="product.html">Product</a></li>
                     <li> <a href="shop.html">Shop</a></li>
                     <li> <a href="wishlist.html">Wishlist</a></li>
@@ -1193,6 +1194,7 @@
                     <label for="productImage">Product Images</label>
                     <input class="show-preview cursor-pointer" type="file" id="productImage">
                   </div>
+                  <div class="flex flex-wrap gap-2 items-center justify-end"> <a class="btn btn-success py-1 text-white text-xs flex gap-2 items-center" href="javascript:void(0)">Save</a><a class="btn btn-secondary py-1 text-white text-xs flex gap-2 items-center" href="javascript:void(0)">Cancel </a></div>
                 </form>
               </div>
             </div>
