--- a/html/unique/cart.html
+++ b/html/unique/cart.html
@@ -1010,6 +1010,7 @@
                     <li> <a href="checkout.html">Checkout</a></li>
                     <li> <a href="invoice.html">Invoice</a></li>
                     <li> <a href="invoice-preview.html">Invoice Preview</a></li>
+                    <li> <a href="invoice-create.html">Invoice Create</a></li>
                     <li> <a href="product.html">Product</a></li>
                     <li> <a href="shop.html">Shop</a></li>
                     <li> <a href="wishlist.html">Wishlist</a></li>
@@ -1155,9 +1156,6 @@
                         </td>
                         <td class="min-w-[100px] 2md:min-w-max">
                           <div class="flex gap-3 items-center justify-end block 2md:hidden"> 
-                            <svg class="hover:stroke-primary w-[18px] h-[18px] stroke-title cursor-pointer"> 
-                              <use href="../../assets/svg/_sprite.svg#Edit-Square"> </use>
-                            </svg>
                             <svg class="hover:stroke-primary remove-cart w-[18px] h-[18px] stroke-title cursor-pointer"> 
                               <use href="../../assets/svg/_sprite.svg#Delete"> </use>
                             </svg><i class="w-5 h-5 cursor-pointer stroke-content" data-feather="bookmark"></i>
@@ -1165,11 +1163,6 @@
                           <div class="dropdown dropdown-bottom"><i class="hidden w-5 h-5 cursor-pointer stroke-title 2md:block" data-feather="more-vertical"></i>
                             <div class="hidden text-left dropdown-menu 2md:block">
                               <ul class="flex flex-col justify-start gap-3">
-                                <li class="cursor-pointer">
-                                  <svg class="hover:stroke-primary w-[18px] h-[18px] stroke-title cursor-pointer"> 
-                                    <use href="../../assets/svg/_sprite.svg#Edit-Square"> </use>
-                                  </svg>
-                                </li>
                                 <li class="cursor-pointer">   
                                   <svg class="hover:stroke-primary remove-cart w-[18px] h-[18px] stroke-title cursor-pointer"> 
                                     <use href="../../assets/svg/_sprite.svg#Delete"> </use>
@@ -1204,9 +1197,6 @@
                         </td>
                         <td class="min-w-[100px] 2md:min-w-max">
                           <div class="flex gap-3 items-center justify-end block 2md:hidden"> 
-                            <svg class="hover:stroke-primary w-[18px] h-[18px] stroke-title cursor-pointer"> 
-                              <use href="../../assets/svg/_sprite.svg#Edit-Square"> </use>
-                            </svg>
                             <svg class="hover:stroke-primary remove-cart w-[18px] h-[18px] stroke-title cursor-pointer"> 
                               <use href="../../assets/svg/_sprite.svg#Delete"> </use>
                             </svg><i class="w-5 h-5 cursor-pointer stroke-content" data-feather="bookmark"></i>
@@ -1214,11 +1204,6 @@
                           <div class="dropdown dropdown-bottom"><i class="hidden w-5 h-5 cursor-pointer stroke-title 2md:block" data-feather="more-vertical"></i>
                             <div class="hidden text-left dropdown-menu 2md:block">
                               <ul class="flex flex-col justify-start gap-3">
-                                <li class="cursor-pointer">
-                                  <svg class="hover:stroke-primary w-[18px] h-[18px] stroke-title cursor-pointer"> 
-                                    <use href="../../assets/svg/_sprite.svg#Edit-Square"> </use>
-                                  </svg>
-                                </li>
                                 <li class="cursor-pointer">   
                                   <svg class="hover:stroke-primary remove-cart w-[18px] h-[18px] stroke-title cursor-pointer"> 
                                     <use href="../../assets/svg/_sprite.svg#Delete"> </use>
@@ -1253,9 +1238,6 @@
                         </td>
                         <td class="min-w-[100px] 2md:min-w-max">
                           <div class="flex gap-3 items-center justify-end block 2md:hidden"> 
-                            <svg class="hover:stroke-primary w-[18px] h-[18px] stroke-title cursor-pointer"> 
-                              <use href="../../assets/svg/_sprite.svg#Edit-Square"> </use>
-                            </svg>
                             <svg class="hover:stroke-primary remove-cart w-[18px] h-[18px] stroke-title cursor-pointer"> 
                               <use href="../../assets/svg/_sprite.svg#Delete"> </use>
                             </svg><i class="w-5 h-5 cursor-pointer stroke-content" data-feather="bookmark"></i>
@@ -1263,11 +1245,6 @@
                           <div class="dropdown dropdown-bottom"><i class="hidden w-5 h-5 cursor-pointer stroke-title 2md:block" data-feather="more-vertical"></i>
                             <div class="hidden text-left dropdown-menu 2md:block">
                               <ul class="flex flex-col justify-start gap-3">
-                                <li class="cursor-pointer">
-                                  <svg class="hover:stroke-primary w-[18px] h-[18px] stroke-title cursor-pointer"> 
-                                    <use href="../../assets/svg/_sprite.svg#Edit-Square"> </use>
-                                  </svg>
-                                </li>
                                 <li class="cursor-pointer">   
                                   <svg class="hover:stroke-primary remove-cart w-[18px] h-[18px] stroke-title cursor-pointer"> 
                                     <use href="../../assets/svg/_sprite.svg#Delete"> </use>
@@ -1302,9 +1279,6 @@
                         </td>
                         <td class="min-w-[100px] 2md:min-w-max">
                           <div class="flex gap-3 items-center justify-end block 2md:hidden"> 
-                            <svg class="hover:stroke-primary w-[18px] h-[18px] stroke-title cursor-pointer"> 
-                              <use href="../../assets/svg/_sprite.svg#Edit-Square"> </use>
-                            </svg>
                             <svg class="hover:stroke-primary remove-cart w-[18px] h-[18px] stroke-title cursor-pointer"> 
                               <use href="../../assets/svg/_sprite.svg#Delete"> </use>
                             </svg><i class="w-5 h-5 cursor-pointer stroke-content" data-feather="bookmark"></i>
@@ -1312,11 +1286,6 @@
                           <div class="dropdown dropdown-bottom"><i class="hidden w-5 h-5 cursor-pointer stroke-title 2md:block" data-feather="more-vertical"></i>
                             <div class="hidden text-left dropdown-menu 2md:block">
                               <ul class="flex flex-col justify-start gap-3">
-                                <li class="cursor-pointer">
-                                  <svg class="hover:stroke-primary w-[18px] h-[18px] stroke-title cursor-pointer"> 
-                                    <use href="../../assets/svg/_sprite.svg#Edit-Square"> </use>
-                                  </svg>
-                                </li>
                                 <li class="cursor-pointer">   
                                   <svg class="hover:stroke-primary remove-cart w-[18px] h-[18px] stroke-title cursor-pointer"> 
                                     <use href="../../assets/svg/_sprite.svg#Delete"> </use>
@@ -1351,9 +1320,6 @@
                         </td>
                         <td class="min-w-[100px] 2md:min-w-max">
                           <div class="flex gap-3 items-center justify-end block 2md:hidden"> 
-                            <svg class="hover:stroke-primary w-[18px] h-[18px] stroke-title cursor-pointer"> 
-                              <use href="../../assets/svg/_sprite.svg#Edit-Square"> </use>
-                            </svg>
                             <svg class="hover:stroke-primary remove-cart w-[18px] h-[18px] stroke-title cursor-pointer"> 
                               <use href="../../assets/svg/_sprite.svg#Delete"> </use>
                             </svg><i class="w-5 h-5 cursor-pointer stroke-content" data-feather="bookmark"></i>
@@ -1361,11 +1327,6 @@
                           <div class="dropdown dropdown-bottom"><i class="hidden w-5 h-5 cursor-pointer stroke-title 2md:block" data-feather="more-vertical"></i>
                             <div class="hidden text-left dropdown-menu 2md:block">
                               <ul class="flex flex-col justify-start gap-3">
-                                <li class="cursor-pointer">
-                                  <svg class="hover:stroke-primary w-[18px] h-[18px] stroke-title cursor-pointer"> 
-                                    <use href="../../assets/svg/_sprite.svg#Edit-Square"> </use>
-                                  </svg>
-                                </li>
                                 <li class="cursor-pointer">   
                                   <svg class="hover:stroke-primary remove-cart w-[18px] h-[18px] stroke-title cursor-pointer"> 
                                     <use href="../../assets/svg/_sprite.svg#Delete"> </use>
@@ -1400,9 +1361,6 @@
                         </td>
                         <td class="min-w-[100px] 2md:min-w-max">
                           <div class="flex gap-3 items-center justify-end block 2md:hidden"> 
-                            <svg class="hover:stroke-primary w-[18px] h-[18px] stroke-title cursor-pointer"> 
-                              <use href="../../assets/svg/_sprite.svg#Edit-Square"> </use>
-                            </svg>
                             <svg class="hover:stroke-primary remove-cart w-[18px] h-[18px] stroke-title cursor-pointer"> 
                               <use href="../../assets/svg/_sprite.svg#Delete"> </use>
                             </svg><i class="w-5 h-5 cursor-pointer stroke-content" data-feather="bookmark"></i>
@@ -1410,11 +1368,6 @@
                           <div class="dropdown dropdown-bottom"><i class="hidden w-5 h-5 cursor-pointer stroke-title 2md:block" data-feather="more-vertical"></i>
                             <div class="hidden text-left dropdown-menu 2md:block">
                               <ul class="flex flex-col justify-start gap-3">
-                                <li class="cursor-pointer">
-                                  <svg class="hover:stroke-primary w-[18px] h-[18px] stroke-title cursor-pointer"> 
-                                    <use href="../../assets/svg/_sprite.svg#Edit-Square"> </use>
-                                  </svg>
-                                </li>
                                 <li class="cursor-pointer">   
                                   <svg class="hover:stroke-primary remove-cart w-[18px] h-[18px] stroke-title cursor-pointer"> 
                                     <use href="../../assets/svg/_sprite.svg#Delete"> </use>
@@ -1449,9 +1402,6 @@
                         </td>
                         <td class="min-w-[100px] 2md:min-w-max">
                           <div class="flex gap-3 items-center justify-end block 2md:hidden"> 
-                            <svg class="hover:stroke-primary w-[18px] h-[18px] stroke-title cursor-pointer"> 
-                              <use href="../../assets/svg/_sprite.svg#Edit-Square"> </use>
-                            </svg>
                             <svg class="hover:stroke-primary remove-cart w-[18px] h-[18px] stroke-title cursor-pointer"> 
                               <use href="../../assets/svg/_sprite.svg#Delete"> </use>
                             </svg><i class="w-5 h-5 cursor-pointer stroke-content" data-feather="bookmark"></i>
@@ -1459,11 +1409,6 @@
                           <div class="dropdown dropdown-bottom"><i class="hidden w-5 h-5 cursor-pointer stroke-title 2md:block" data-feather="more-vertical"></i>
                             <div class="hidden text-left dropdown-menu 2md:block">
                               <ul class="flex flex-col justify-start gap-3">
-                                <li class="cursor-pointer">
-                                  <svg class="hover:stroke-primary w-[18px] h-[18px] stroke-title cursor-pointer"> 
-                                    <use href="../../assets/svg/_sprite.svg#Edit-Square"> </use>
-                                  </svg>
-                                </li>
                                 <li class="cursor-pointer">   
                                   <svg class="hover:stroke-primary remove-cart w-[18px] h-[18px] stroke-title cursor-pointer"> 
                                     <use href="../../assets/svg/_sprite.svg#Delete"> </use>
@@ -1498,9 +1443,6 @@
                         </td>
                         <td class="min-w-[100px] 2md:min-w-max">
                           <div class="flex gap-3 items-center justify-end block 2md:hidden"> 
-                            <svg class="hover:stroke-primary w-[18px] h-[18px] stroke-title cursor-pointer"> 
-                              <use href="../../assets/svg/_sprite.svg#Edit-Square"> </use>
-                            </svg>
                             <svg class="hover:stroke-primary remove-cart w-[18px] h-[18px] stroke-title cursor-pointer"> 
                               <use href="../../assets/svg/_sprite.svg#Delete"> </use>
                             </svg><i class="w-5 h-5 cursor-pointer stroke-content" data-feather="bookmark"></i>
@@ -1508,11 +1450,6 @@
                           <div class="dropdown dropdown-bottom"><i class="hidden w-5 h-5 cursor-pointer stroke-title 2md:block" data-feather="more-vertical"></i>
                             <div class="hidden text-left dropdown-menu 2md:block">
                               <ul class="flex flex-col justify-start gap-3">
-                                <li class="cursor-pointer">
-                                  <svg class="hover:stroke-primary w-[18px] h-[18px] stroke-title cursor-pointer"> 
-                                    <use href="../../assets/svg/_sprite.svg#Edit-Square"> </use>
-                                  </svg>
-                                </li>
                                 <li class="cursor-pointer">   
                                   <svg class="hover:stroke-primary remove-cart w-[18px] h-[18px] stroke-title cursor-pointer"> 
                                     <use href="../../assets/svg/_sprite.svg#Delete"> </use>
@@ -1553,7 +1490,7 @@
                       <h6>(-)0.00 </h6>
                     </li>
                     <li class="flex items-center justify-between text-content font-bold">
-                      <h6>Shipping</h6>
+                      <h6>Shipping </h6>
                       <h6>$6.90 </h6>
                     </li>
                   </ul>
