--- a/html/unique/fontawesome.html
+++ b/html/unique/fontawesome.html
@@ -1010,6 +1010,7 @@
                     <li> <a href="checkout.html">Checkout</a></li>
                     <li> <a href="invoice.html">Invoice</a></li>
                     <li> <a href="invoice-preview.html">Invoice Preview</a></li>
+                    <li> <a href="invoice-create.html">Invoice Create</a></li>
                     <li> <a href="product.html">Product</a></li>
                     <li> <a href="shop.html">Shop</a></li>
                     <li> <a href="wishlist.html">Wishlist</a></li>
