--- a/html/unique/invoice-preview.html
+++ b/html/unique/invoice-preview.html
@@ -1010,6 +1010,7 @@
                     <li> <a href="checkout.html">Checkout</a></li>
                     <li> <a href="invoice.html">Invoice</a></li>
                     <li> <a href="invoice-preview.html">Invoice Preview</a></li>
+                    <li> <a href="invoice-create.html">Invoice Create</a></li>
                     <li> <a href="product.html">Product</a></li>
                     <li> <a href="shop.html">Shop</a></li>
                     <li> <a href="wishlist.html">Wishlist</a></li>
@@ -1161,13 +1162,15 @@
                     </tr>
                     <tr>
                       <td class="min-w-[220px]"> 
-                        <p class="text-title text-xs font-bold uppercase !mb-3">Shipping Address </p>
+                        <p class="text-title text-xs font-bold uppercase !mb-0">Shipping Address </p>
+                        <p class="text-title text-xs font-bold">	Vilma Gerhold</p>
                         <p class="font-medium text-content3">14300 Gallant Fox Ln, Bowie</p>
                         <p class="font-medium text-content3">Maryland, 20715, US</p>
                         <p class="font-medium text-content3">(301) 464-0110</p>
                       </td>
                       <td class="min-w-[220px]"> 
-                        <p class="text-title text-xs font-bold uppercase !mb-3">Billing Address </p>
+                        <p class="text-title text-xs font-bold uppercase !mb-0">Billing Address </p>
+                        <p class="text-title text-xs font-bold">	Vilma Gerhold</p>
                         <p class="font-medium text-content3">14300 Gallant Fox Ln, Bowie</p>
                         <p class="font-medium text-content3">Maryland, 20715, US</p>
                         <p class="font-medium text-content3">(301) 464-0110</p>
@@ -1248,6 +1251,7 @@
                     </tr>
                     <tr> 
                       <td class="!text-left" colspan="2">
+                        <p class="text-title text-xs font-bold uppercase !mb-0">Payment Detail</p>
                         <p class="text-title text-xs font-semibold">Payment Method: <span class="font-medium text-content3">Mastercard</span></p>
                         <p class="text-title text-xs font-semibold">Card Holder: <span class="font-medium text-content3">	Vilma Gerhold</span></p>
                         <p class="text-title text-xs font-semibold">Card Number: <span class="font-medium text-content3">xxx xxxx xxxx 7159       </span></p>
