design user card page

--- a/html/unique/invoice-create.html
+++ b/html/unique/invoice-create.html
@@ -1287,7 +1287,9 @@
                   <p class="font-medium text-content3 !text-start rtl:!text-end">All accounts must be settled within seven days of receiving an invoice. to be paid by check, credit card, or online direct deposit. If the account is not paid within seven days, the agreed-upon quoted fee indicated above will be charged to the credits details provided as confirmation of the task completed.</p>
                 </form>
                 <div class="divider w-full bg-gray-light"></div>
-                <div class="flex items-center gap-2 justify-end"><a class="btn btn-success py-1 text-white text-xs flex gap-2 items-center" href="javascript:window.print()"> <i class="w-4 h-4 stroke-white" data-feather="printer"></i>Print</a><a class="btn btn-secondary py-1 text-white text-xs flex gap-2 items-center" href="../../assets/chat-doc/invoice.pdf" Download> <i class="w-4 h-4 stroke-white" data-feather="arrow-down">                                              </i>Download   </a></div>
+                <div class="flex items-center gap-2 justify-end"><a class="btn btn-success py-1 text-white text-xs flex gap-2 items-center" href="javascript:window.print()">
+                     Save</a><a class="btn btn-secondary py-1 text-white text-xs flex gap-2 items-center" href="../../assets/chat-doc/invoice.pdf" Download>
+                     Cancel   </a></div>
               </div>
             </div>
           </div>
