--- a/html/unique/user-profile.html
+++ b/html/unique/user-profile.html
@@ -1120,145 +1120,76 @@
         <!-- Sidebar End -->
         <!-- Page Body Start-->
         <div class="page-body">
-          <div class="grid grid-cols-12 gap-card-gap">
-            <div class="col-span-9"></div>
-            <div class="col-span-3 gap-card-gap flex flex-col"> 
-              <div class="card"> 
-                <div class="card-header pb-2 header-bottom-border !border-dashed">
-                  <h3 class="text-lg font-bold">About Me </h3>
-                </div>
-                <div class="card-body">
-                  <ul class="flex flex-col gap-4"> 
-                    <li class="flex items-center gap-3">
-                      <svg class="w-9 h-9 p-2 bg-border-light stroke-title rounded-full"> 
-                        <use href="../../assets/svg/_sprite.svg#Send"> </use>
-                      </svg>
-                      <div class="flex flex-col"> 
-                        <p class="text-xs font-semibold">UX Designer At Pixelstrap</p><span class="text-content3 font-semibold text-2xs">Bangalore - 2021</span>
-                      </div>
-                    </li>
-                    <li class="flex items-center gap-3">
-                      <svg class="w-9 h-9 p-2 bg-border-light stroke-title rounded-full"> 
-                        <use href="../../assets/svg/_sprite.svg#Buy"> </use>
-                      </svg>
-                      <div class="flex flex-col"> 
-                        <p class="text-xs font-semibold">Studied Computer Science</p><span class="text-content3 font-semibold text-2xs">At London University - 2015</span>
-                      </div>
-                    </li>
-                    <li class="flex items-center gap-3">
-                      <svg class="w-9 h-9 p-2 bg-border-light stroke-title rounded-full"> 
-                        <use href="../../assets/svg/_sprite.svg#Download"> </use>
-                      </svg>
-                      <div class="flex flex-col"> 
-                        <p class="text-xs font-semibold">Relationship Status</p><span class="text-content3 font-semibold text-2xs">Single</span>
-                      </div>
-                    </li>
-                    <li class="flex items-center gap-3">
-                      <svg class="w-9 h-9 p-2 bg-border-light stroke-title rounded-full"> 
-                        <use href="../../assets/svg/_sprite.svg#Swap"> </use>
-                      </svg>
-                      <div class="flex flex-col"> 
-                        <p class="text-xs font-semibold">Lived In London</p><span class="text-content3 font-semibold text-2xs">Last 5 Year</span>
-                      </div>
-                    </li>
-                    <li class="flex items-center gap-3">
-                      <svg class="w-9 h-9 p-2 bg-border-light stroke-title rounded-full"> 
-                        <use href="../../assets/svg/_sprite.svg#Ticket-Star"> </use>
-                      </svg>
-                      <div class="flex flex-col"> 
-                        <p class="text-xs font-semibold">Blood Group</p><span class="text-content3 font-semibold text-2xs">O+ Positive</span>
-                      </div>
-                    </li>
-                  </ul>
-                  <div>
-                    <div class="pt-4 pb-2 border-b border-border-light !border-dashed">
-                      <h3 class="text-lg font-bold">Social Networks </h3>
-                    </div>
-                    <div class="flex flex-col gap-2 mt-4"> 
-                      <button class="btn bg-facebook text-white flex items-center gap-3 text-xs font-semibold justify-center"> <i class="fa-brands fa-facebook-f"></i>Facebook</button>
-                      <button class="btn bg-twitter text-white flex items-center gap-3 text-xs font-semibold justify-center"> <i class="fa-brands fa-twitter"></i>Twitter</button>
-                      <button class="btn bg-danger text-white flex items-center gap-3 text-xs font-semibold justify-center"> <i class="fa-brands fa-dribbble"></i>Dribble</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card gap-0"> 
-                <div class="card-header">
-                  <h3 class="text-lg font-bold">Friends </h3>
-                </div>
-                <div class="card-body">
-                  <div class="accordionWrapper flush">
-                    <div class="accordionItem open">
-                      <h4 class="accordionItemHeading !text-content3 !px-0 !border-dashed flex items-center justify-between">
-                         Close Friends
-                        <svg class="w-[1.25rem] h-[1.25rem] !stroke-primary"> 
-                          <use href="../../assets/svg/_sprite.svg#Arrow-Down-Circle"> </use>
-                        </svg>
-                      </h4>
-                      <div class="accordionItemContent !px-0 !border-none !mb-0">
-                        <ul class="flex flex-col gap-4">
-                          <li>                                <a class="flex items-center gap-3" href="user-card.html"> 
-                              <div class="avatar"> 
-                                <div class="w-10 rounded-full xl:w-9"> <img src="../../assets/images/avatar/25.jpg" alt="avatar"></div>
-                              </div>
-                              <div>
-                                <p class="text-xs font-semibold leading-none lg:text-2xs">Carla Packard</p><span class="text-content3 font-semibold text-2xs">Alabma, USA</span>
-                              </div></a></li>
-                          <li>                                <a class="flex items-center gap-3" href="user-card.html"> 
-                              <div class="avatar">
-                                <div class="w-10 rounded-full xl:w-9"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
-                              </div>
-                              <div>
-                                <p class="text-xs font-semibold leading-none lg:text-2xs">Andrew Black</p><span class="text-content3 font-semibold text-2xs">Alabma, USA</span>
-                              </div></a></li>
-                          <li>                                <a class="flex items-center gap-3" href="user-card.html"> 
-                              <div class="avatar">
-                                <div class="w-10 rounded-full xl:w-9"><img src="../../assets/images/avatar/6.jpg" alt="avatar"></div>
-                              </div>
-                              <div>
-                                <p class="text-xs font-semibold leading-none lg:text-2xs">Oliver Dawson</p><span class="text-content3 font-semibold text-2xs">Alabma, USA </span>
-                              </div></a></li>
-                          <li>                                <a class="flex items-center gap-3" href="user-card.html"> 
-                              <div class="avatar">
-                                <div class="w-10 rounded-full xl:w-9"><img src="../../assets/images/avatar/27.jpg" alt="avatar"></div>
-                              </div>
-                              <div>
-                                <p class="text-xs font-semibold leading-none lg:text-2xs">Robert Lanzel</p><span class="text-content3 font-semibold text-2xs">Alabma, USA  </span>
-                              </div></a></li>
-                        </ul>
+          <div class="user-bg"> <img class="w-full h-80" src="../../assets/images/user-app/bg.jpg" alt=""></div>
+          <div class="grid grid-cols-12 gap-card-gap px-body-space mt-[-100px]">
+            <div class="col-span-3">
+              <div class="grid grid-cols-12 gap-4">
+                <div class="col-span-12">
+                  <div class="card"> 
+                    <div class="card-body flex flex-col gap-4 items-center justify-center">
+                      <div class="avatar rounded-xl overflow-visible w-[128px] h-[123px] relative mb-4"><img src="../../assets/images/avatar/38.jpg" alt="girl in yellow jacket"><span class="p-1 bg-white rounded-full absolute bottom-[-12px] right-[-12px] shadow-xl"><a href="user-profile.html">
+                            <svg class="w-5 h-5 stroke-title"> 
+                              <use href="../../assets/svg/_sprite.svg#Edit"> </use>
+                            </svg></a></span></div>
+                      <div class="text-center">
+                        <p class="text-xs text-title font-semibold">Emayila Sidorshina</p><span class="text-2xs text-content3 font-semibold"> emayiladosidorshina@gmail.com</span>
                       </div>
                     </div>
                   </div>
-                  <div class="accordionWrapper flush">
-                    <div class="accordionItem open">
-                      <h4 class="accordionItemHeading !text-content3 !px-0 !border-dashed flex items-center justify-between">Recent Chats
-                        <svg class="w-[1.25rem] h-[1.25rem] !stroke-primary"> 
-                          <use href="../../assets/svg/_sprite.svg#Arrow-Down-Circle"> </use>
-                        </svg>
-                      </h4>
-                      <div class="accordionItemContent !px-0 !border-none !mb-0">
-                        <ul class="flex flex-col gap-4">
-                          <li>                                <a class="flex items-center gap-3" href="user-card.html"> 
-                              <div class="avatar"> 
-                                <div class="w-10 rounded-full xl:w-9"> <img src="../../assets/images/avatar/25.jpg" alt="avatar"></div>
-                              </div>
-                              <div>
-                                <p class="text-xs font-semibold leading-none lg:text-2xs">Carla Packard</p><span class="text-content3 font-semibold text-2xs">Alabma, USA</span>
-                              </div></a></li>
-                          <li>                                <a class="flex items-center gap-3" href="user-card.html"> 
-                              <div class="avatar">
-                                <div class="w-10 rounded-full xl:w-9"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
-                              </div>
-                              <div>
-                                <p class="text-xs font-semibold leading-none lg:text-2xs">Andrew Black</p><span class="text-content3 font-semibold text-2xs">Alabma, USA</span>
-                              </div></a></li>
-                        </ul>
+                </div>
+                <div class="col-span-12">
+                  <div class="card"> 
+                    <div class="card-header"> 
+                      <h3 class="text-lg font-bold">Info  </h3>
+                    </div>
+                    <div class="card-body flex flex-col gap-4">
+                      <p class="text-title text-xs font-semibold capitalize">Name: <span class="font-medium text-content3">Emayila Sidorshina</span></p>
+                      <p class="text-title text-xs font-semibold capitalize">Email Id: <span class="font-medium text-content3">emayiladosidorshina@gmail.com</span></p>
+                      <p class="text-title text-xs font-semibold capitalize">Contact No: <span class="font-medium text-content3">(773) 847-8982 </span></p>
+                      <p class="text-title text-xs font-semibold capitalize">Registration date: <span class="font-medium text-content3">Oct, 25,2022</span></p>
+                      <p class="text-title text-xs font-semibold capitalize">Member Status: <span class="font-medium text-content3">Active Member</span></p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-span-12">
+                  <div class="card"> 
+                    <div class="card-header"> 
+                      <h3 class="text-lg font-bold">Social Media </h3>
+                    </div>
+                    <div class="card-body">
+                      <div class="social sm:flex-col flex items-center justify-center gap-2"><a class="bg-gray-light rounded-full btn !text-facebook" href="https://www.facebook.com/login"><i class="fa-brands fa-facebook-f w-4 h-4"></i></a><a class="bg-gray-light rounded-full btn !text-linkedin" href="https://www.linkedin.com/login"><i class="fa-brands fa-linkedin-in w-4 h-4"></i></a><a class="bg-gray-light rounded-full btn !text-twitter" href="https://twitter.com/i/flow/login"><i class="fa-brands fa-twitter w-4 h-4"></i></a><a class="bg-gray-light rounded-full btn instagram !text-instagram" href="https://www.instagram.com/accounts/login/">
+                          <svg width="0" height="0">
+                            <radialgradient id="rg" r="150%" cx="30%" cy="107%">
+                              <stop stop-color="#fdf497" offset="0"></stop>
+                              <stop stop-color="#fdf497" offset="0.05"></stop>
+                              <stop stop-color="#fd5949" offset="0.45"></stop>
+                              <stop stop-color="#d6249f" offset="0.6"></stop>
+                              <stop stop-color="#285AEB" offset="0.9"></stop>
+                            </radialgradient>
+                          </svg><i class="fa-brands fa-instagram w-4 h-4"></i></a><a class="bg-gray-light rounded-full btn !text-danger" href="https://www.rss.com/"><i class="fa-solid fa-rss w-4 h-4"></i></a></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-span-12">
+                  <div class="card"> 
+                    <div class="card-header"> 
+                      <h3 class="text-lg font-bold">Skills </h3>
+                    </div>
+                    <div class="card-body">
+                      <div class="flex flex-wrap gap-2"> 
+                        <div class="badge bg-primary text-white rounded-full">HTML</div>
+                        <div class="badge bg-primary text-white rounded-full">Css</div>
+                        <div class="badge bg-primary text-white rounded-full">JavaScript</div>
+                        <div class="badge bg-primary text-white rounded-full">Tailwindcss</div>
+                        <div class="badge bg-primary text-white rounded-full">Pug </div>
+                        <div class="badge bg-primary text-white rounded-full">Illustrator</div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
+            <div class="col-span-9"></div>
           </div>
           <!-- Page Body End  -->
           <div class="page-footer sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap"> 
