--- a/html/unique/chat-app.html
+++ b/html/unique/chat-app.html
@@ -2054,7 +2054,7 @@
     <div class="modal-main">
       <input class="peer" id="voice-call-modal" name="voice-call-modal" type="checkbox">
       <label class="modal-overlay peer-checked:block" for="voice-call-modal"></label>
-      <div class="modal modal-center max-w-[450px] 2md:!w-full peer-checked:block rounded-xl">
+      <div class="modal modal-center max-w-[450px] 2md:!w-full peer-checked:opacity-100 peer-checked:visible rounded-xl">
         <div class="modal-body !p-0 min-h-[500px]">
           <div class="voicecall relative"><img class="h-[500px] w-[450px] opacity-70" src="../../assets/images/chat-app/12.jpg" alt="girl">
             <div class="voicecall-content flex flex-col gap-3 absolute items-center bottom-[10%] left-0 right-0">
@@ -2084,7 +2084,7 @@
     <div class="modal-main">
       <input class="peer" id="accept-call-modal" name="accept-call-modal" type="checkbox">
       <label class="modal-overlay peer-checked:block" for="accept-call-modal"></label>
-      <div class="modal modal-center max-w-[450px] 2md:!w-full peer-checked:block rounded-xl">
+      <div class="modal modal-center max-w-[450px] 2md:!w-full peer-checked:opacity-100 peer-checked:visible rounded-xl">
         <div class="modal-body !p-0 min-h-[500px]">
           <div class="voicecall relative"><img class="h-[500px] w-[450px] opacity-70" src="../../assets/images/chat-app/12.jpg" alt="girl">
             <div class="voicecall-content flex flex-col gap-3 absolute items-center bottom-[10%] left-0 right-0">
@@ -2129,7 +2129,7 @@
     <div class="modal-main"> 
       <input class="peer" id="video-call-modal" name="video-call-modal" type="checkbox">
       <label class="modal-overlay peer-checked:block" for="video-call-modal"></label>
-      <div class="modal modal-center !min-w-[850px] lg:!min-w-[600px] 2md:!min-w-[450px] sm:!min-w-[300px] !h-[715px] lg:!h-[692px] 2md:!h-[400px] 2sm:!min-w-[200px] 2sm:!h-[250px] peer-checked:block rounded-none">
+      <div class="modal modal-center !min-w-[850px] lg:!min-w-[600px] 2md:!min-w-[450px] sm:!min-w-[300px] !h-[715px] lg:!h-[692px] 2md:!h-[400px] 2sm:!min-w-[200px] 2sm:!h-[250px] peer-checked:opacity-100 peer-checked:visible rounded-none">
         <div class="modal-body !p-0">
           <div class="countdown flex gap-1 wrap items-center absolute top-[3%] z-[1] right-[5%] text-[36px] 2md:text-3xl-responsive text-white font-extrabold">
             <label id="callminutes">00</label><span>:</span>
